--- a/Alpino/Ejemplo/Ejemplo.Web/Components/Pages/Usuarios/Login.razor
+++ b/Alpino/Ejemplo/Ejemplo.Web/Components/Pages/Usuarios/Login.razor
@@ -2,7 +2,7 @@
 
 @layout MainLayoutGeneral
 
-@using GDA.Core.Ciudadano.Components.Layout
+@using Ejemplo.Web.Components.Layout
 
 <div class="authentication" style="background-image:url('assets/images/bg-login.jpg')">
     <div class="container">
