--- a/Alpino/Ejemplo/Ejemplo.Components/Carousel/Carousel.razor
+++ b/Alpino/Ejemplo/Ejemplo.Components/Carousel/Carousel.razor
@@ -1,4 +1,6 @@
-﻿<section class="ng-carousel" id="ngc-1"
+﻿@using Ejemplo.Components.Carousel
+
+<section class="ng-carousel" id="ngc-1"
          style="--ng-max-width: 1024px; --ng-aspect-ratio: 21/9; --ng-duration: 4s; --ng-steps: @Slides.Count; --ng-dot-w: 28px; --ng-dot-h: 5px; --ng-dot-radius: 999px; --ng-dot-color: red; --ng-dot-bg: rgba(255,255,255,.4);">
 
     <div class="ngc-viewport">
