--- a/Alpino/Ejemplo/Ejemplo.Components/Charts/Chart.razor
+++ b/Alpino/Ejemplo/Ejemplo.Components/Charts/Chart.razor
@@ -1,4 +1,6 @@
-﻿@using GDA.Core.Components.Charts
+﻿@using Ejemplo.Charts
+@using Ejemplo.Components.Charts
+
 @using Microsoft.JSInterop
 @using System.Data
 
