--- a/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/Charts/DemoChartjs.razor
+++ b/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/Charts/DemoChartjs.razor
@@ -1,8 +1,10 @@
 ﻿@page "/demo-chartjs"
 @using System.Data
+
 @using Ejemplo
+@using Ejemplo.Charts
 @using Ejemplo.Components
-@using GDA.Core.Components.Charts
+@using Ejemplo.Components.Charts
 
 <p>Ejemplo usando el component chart</p>
 
