--- a/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/JQueryKnob/DemoKnob.razor
+++ b/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/JQueryKnob/DemoKnob.razor
@@ -3,8 +3,9 @@
 @using System.Data
 @using Ejemplo
 @using Ejemplo.Components
-@using GDA.Core.Components.Charts
-@using GDA.Core.Components.Knob
+
+@using Ejemplo.Components.Charts
+@using Ejemplo.Components.Knob
 
 @attribute [StreamRendering]
 @rendermode InteractiveServer
