--- a/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/Quill/DemoQuill.razor
+++ b/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/Quill/DemoQuill.razor
@@ -2,7 +2,7 @@
 
 @using Ejemplo
 @using Ejemplo.Components
-@using GDA.Core.Components.Quill
+@using Ejemplo.Components.Quill
 
 @rendermode InteractiveServer
 @attribute [StreamRendering]
