--- a/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/Quill/DemoQuillBinding.razor
+++ b/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/Quill/DemoQuillBinding.razor
@@ -1,7 +1,9 @@
 ﻿@page "/demo-quill-anidado"
+
 @using Ejemplo
 @using Ejemplo.Components
-@using GDA.Core.Components.Quill
+
+@using Ejemplo.Components.Quill
 
 @rendermode InteractiveServer
 @attribute [StreamRendering]
