--- a/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/Quill/DemoQuillFocusOut.razor
+++ b/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/Quill/DemoQuillFocusOut.razor
@@ -1,7 +1,8 @@
 ﻿@page "/demo-quill-focus-out"
 @using Ejemplo
 @using Ejemplo.Components
-@using GDA.Core.Components.Quill
+
+@using Ejemplo.Components.Quill
 
 @rendermode InteractiveServer
 @attribute [StreamRendering]
