--- a/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/SearchingList/DemoSearchingComponent.razor
+++ b/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/SearchingList/DemoSearchingComponent.razor
@@ -4,7 +4,7 @@
 @using System.Globalization
 @using Ejemplo
 @using Ejemplo.Components
-@using GDA.Core.Components.SearchingList
+@using Ejemplo.Components.SearchingList
 
 @attribute [StreamRendering]
 @rendermode InteractiveServer
