--- a/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/Sidebar/DemoSideBar.razor
+++ b/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/Sidebar/DemoSideBar.razor
@@ -2,8 +2,8 @@
 
 
 @using Ejemplo
-@using Ejemplo.Components
-@using Ejemplo.Components.Layout
+@using Ejemplo.DemoComponent
+@using Ejemplo.DemoComponent.Components.Layout
 
 
 @layout SidebarLayout
