--- a/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/SparkLine/DemoSparkLine.razor
+++ b/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/SparkLine/DemoSparkLine.razor
@@ -3,7 +3,7 @@
 @using System.Data
 @using Ejemplo
 @using Ejemplo.Components
-@using GDA.Core.Components.SparkLine
+@using Ejemplo.Components.SparkLine
 
 @attribute [StreamRendering]
 @rendermode InteractiveServer
