--- a/Alpino/Ejemplo/Ejemplo.Web/Components/Pages/Usuarios/Login.razor
+++ b/Alpino/Ejemplo/Ejemplo.Web/Components/Pages/Usuarios/Login.razor
@@ -3,6 +3,7 @@
 @layout MainLayoutGeneral
 
 @using Ejemplo.Web.Components.Layout
+@using Microsoft.AspNetCore.Components.Forms
 
 <div class="authentication" style="background-image:url('assets/images/bg-login.jpg')">
     <div class="container">
