--- a/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/Carousel/DemoCarouselComponent.razor
+++ b/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/Carousel/DemoCarouselComponent.razor
@@ -1,7 +1,8 @@
 ﻿@page "/demo-carousel-component"
 @using Ejemplo
 @using Ejemplo.Components
-@using GDA.Core.Components.Carousel
+
+@using Ejemplo.Components.Carousel
 
 @attribute [StreamRendering]
 @rendermode InteractiveServer
