--- a/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/GoogleMaps/DemoGoogleMapsAnidado.razor
+++ b/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/GoogleMaps/DemoGoogleMapsAnidado.razor
@@ -2,7 +2,7 @@
 
 @using Ejemplo
 @using Ejemplo.Components
-@using GDA.Core.Components.GoogleMaps
+@using Ejemplo.Components.GoogleMaps
 
 @rendermode InteractiveServer
 @attribute [StreamRendering]
