--- a/Alpino/Ejemplo/Ejemplo.Web/Components/App.razor
+++ b/Alpino/Ejemplo/Ejemplo.Web/Components/App.razor
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="GDA.Core.Ciudadano.styles.css" />
+    <link rel="stylesheet" href="Ejemplo.Web.styles.css" />
     <link rel="icon" type="image/png" href="assets/images/LogoGDA.png" />
 
     <!-- template plugins -->
