--- a/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/SearchingList/DemoEjemploSearchInDataTable.razor
+++ b/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/DemosComponents/SearchingList/DemoEjemploSearchInDataTable.razor
@@ -1,6 +1,8 @@
-﻿@page "/demo-datatable-search"
+﻿@page "/DemoEjemploSearchInDataTable"
+
 @using System.Data
 @using System.Globalization
+
 @using Ejemplo
 @using Ejemplo.Components
 
