--- a/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/Index.razor
+++ b/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/Index.razor
@@ -3,11 +3,103 @@
 
 <PageTitle>Home</PageTitle>
 
-<card>
+<!-- Main Content -->
+<section class="content home">
+    <div class="container-fluid">
 
-</card>
+        <div class="row clearfix">
 
 
-<h1>Hello, world!</h1>
+            <div class="col-lg-3 col-6">
+                <div class="single_post">
+                    <a href="/DemoComponentSelect2">
+                        <div class="card text-center contenedor">
+                            <div class="flotante flotante-green">Select 2</div>
+                            <div class="body">
+                                <p class="m-b-20"><img src="assets/images/profile_av.jpg" /></p>
+                                <h6 class="m-b-10 index-titulo">Demo select2</h6>
+                                <button class="btn btn-raised btn-primary waves-effect btn-round btn-sm">Ingresar</button>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
 
-Welcome to your new app.
+            <div class="col-lg-3 col-6">
+                <div class="single_post">
+                    <a href="/DemoComponentPaginador">
+                        <div class="card text-center contenedor">
+                            <div class="flotante flotante-green">Paginador</div>
+                            <div class="body">
+                                <p class="m-b-20"><img src="assets/images/profile_av.jpg" /></p>
+                                <h6 class="m-b-10 index-titulo">Listas paginadas</h6>
+                                <button class="btn btn-raised btn-primary waves-effect btn-round btn-sm">Ingresar</button>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-6">
+                <div class="single_post">
+                    <a href="/DemoComponentQuill">
+                        <div class="card text-center contenedor">
+                            <div class="flotante flotante-green">Quill</div>
+                            <div class="body">
+                                <p class="m-b-20"><img src="assets/images/profile_av.jpg" /></p>
+                                <h6 class="m-b-10 index-titulo">Editor de texto enriquecido</h6>
+                                <button class="btn btn-raised btn-primary waves-effect btn-round btn-sm">Ingresar</button>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-6">
+                <div class="single_post">
+                    <a href="/DemoComponentSearchinglist">
+                        <div class="card text-center contenedor">
+                            <div class="flotante flotante-green">SearchingList</div>
+                            <div class="body">
+                                <p class="m-b-20"><img src="assets/images/profile_av.jpg" /></p>
+                                <h6 class="m-b-10 index-titulo">Componente para Filtrado dinámico en List</h6>
+                                <button class="btn btn-raised btn-primary waves-effect btn-round btn-sm">Ingresar</button>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-6">
+                <div class="single_post">
+                    <a href="/DemoEjemploSearchInDataTable">
+                        <div class="card text-center contenedor">
+                            <div class="flotante flotante-green">Búsqueda/Filtrado dinámico</div>
+                            <div class="body">
+                                <p class="m-b-20"><img src="assets/images/profile_av.jpg" /></p>
+                                <h6 class="m-b-10 index-titulo">Filtrado dinámico en List</h6>
+                                <button class="btn btn-raised btn-primary waves-effect btn-round btn-sm">Ingresar</button>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-6">
+                <div class="single_post">
+                    <a href="/DemoEjemploSearchInList">
+                        <div class="card text-center contenedor">
+                            <div class="flotante flotante-green">Búsqueda/Filtrado dinámico</div>
+                            <div class="body">
+                                <p class="m-b-20"><img src="assets/images/profile_av.jpg" /></p>
+                                <h6 class="m-b-10 index-titulo">Filtrado dinámico en List </h6>
+                                <button class="btn btn-raised btn-primary waves-effect btn-round btn-sm">Ingresar</button>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
