--- a/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/Index.razor
+++ b/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Pages/Index.razor
@@ -99,6 +99,22 @@
                     </a>
                 </div>
             </div>
+
+
+            <div class="col-lg-3 col-6">
+                <div class="single_post">
+                    <a href="/DemoComponentCarousel">
+                        <div class="card text-center contenedor">
+                            <div class="flotante flotante-green">Carrusel</div>
+                            <div class="body">
+                                <p class="m-b-20"><img src="assets/images/profile_av.jpg" /></p>
+                                <h6 class="m-b-10 index-titulo"> </h6>
+                                <button class="btn btn-raised btn-primary waves-effect btn-round btn-sm">Ingresar</button>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 
