--- a/Alpino/Ejemplo/Ejemplo.BackOffice/Components/App.razor
+++ b/Alpino/Ejemplo/Ejemplo.BackOffice/Components/App.razor
@@ -1,13 +1,18 @@
-﻿<!DOCTYPE html>
+﻿@using Ejemplo.WebBackOffice
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <base href="/" />
-    <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="app.css" />
-    <link rel="stylesheet" href="Ejemplo.BackOffice.styles.css" />
+
+    @* <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="app.css" /> 
+    <link rel="stylesheet" href="Ejemplo.Backoffice.styles.css" />
+    *@
+
     <link rel="icon" type="image/png" href="favicon.png" />
 
     <!-- template plugins -->
@@ -29,6 +34,32 @@
     <!-- chartjs, jqueryknow -->
 
     <link rel="stylesheet" href="assets/css/color_skins.css">
+
+    <!-- externos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+    <!-- carousel juan -->
+
+    <link rel="stylesheet" href="css/components/carouselng/carouselng.css?v=@version" />
+    <link rel="stylesheet" href="css/components/carouselng/carouselng.ui.css?v=@version" />
+
+    <!-- quill, no template -->
+
+    <link rel="stylesheet" href="css/components/quill/quill.snow.css?v=@version" />
+
+    <!-- adicionales -->
+    <!--oculta el mensaje reconectar de blazor-->
+    <link rel="stylesheet" href="css/additionals/blazor/blazor-reconnect.css?v=@version" />
+
+    <!-- menu sidebar juan -->
+    <link rel="stylesheet" href="css/additionals/sidebarng/sidebarng.css?v=@version" />
+    <link rel="stylesheet" href="css/additionals/sidebarng/sidebarng.ui.css?v=@version" />
+    <link rel="stylesheet" href="css/additionals/sidebarng/sidebar-override.css?v=@version" />
+    <link rel="stylesheet" href="css/additionals/sidebarng/body-menu.css?v=@version">
+
+    <!--playholder-->
+
+    <link rel="stylesheet" href="css/additionals/ng-placeholder.css?v=@version">
 
     <HeadOutlet />
 </head>
@@ -89,7 +120,21 @@
         <script src="assets/js/pages/forms/basic-form-elements.js"></script>
     </div>
 
+    @* componentes, componentes externos *@
+    <div>
+        @* quill *@
+        <script src="js/components/quill/quill.min.js"></script>
+
+        @* googlempas *@
+        <script src="js/components/GoogleMaps/googlemaps.min.js?v=@version"></script>
+    </div>
+
     <script src="_framework/blazor.web.js"></script>
 </body>
 
 </html>
+
+
+@code {
+    private string version = AppVersion.Version;
+}
