--- a/Alpino/Ejemplo/Ejemplo.BackOffice/Components/Pages/Usuarios/Login.razor
+++ b/Alpino/Ejemplo/Ejemplo.BackOffice/Components/Pages/Usuarios/Login.razor
@@ -30,7 +30,7 @@
                         <EditForm method="post" Model="Model" OnValidSubmit="onLogin" FormName="LoginForm" Enhance>
 
                             <div class="input-group">
-                                <InputText id="User" class="form-control" @bind-Value="Model.Nombre" placeholder="Ingresa tu DNI" type="number" />
+                                <InputText id="User" class="form-control" @bind-Value="Model.Nombre" placeholder="Ingresa el usuario"  />
                                 <span class="input-group-addon"><i class="zmdi zmdi-account-circle"></i></span>
                             </div>
                             <div class="input-group">
