refacotrizando js y css en democomponent

--- a/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/App.razor
+++ b/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/App.razor
@@ -7,8 +7,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="Ejemplo.Web.styles.css" />
-    <link rel="icon" type="image/png" href="assets/images/LogoGDA.png" />
+    @* <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="app.css" /> 
+    <link rel="stylesheet" href="Ejemplo.DemoComponent.styles.css" />
+    *@>
 
     <!-- template plugins -->
 
@@ -128,22 +130,31 @@
         <script src="assets/js/pages/forms/basic-form-elements.js"></script>
     </div>
 
-    @* componentes, componentes externos *@
-    <div>
-        @* quill *@
-        <script src="js/components/quill/quill.min.js?v=@version"></script>
+    <!-- externos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-        @* googlempas *@
-        <script src="js/components/GoogleMaps/googlemaps.min.js?v=@version"></script>
-    </div>
+    <!-- carousel juan -->
 
-    <script>
-        window.removeEmptyClassFromBody = function () {
-            if (document.body && document.body.getAttribute("class") === "") {
-                document.body.removeAttribute("class");
-            }
-        };
-    </script>
+    <link rel="stylesheet" href="css/components/carouselng/carouselng.css?v=@version" />
+    <link rel="stylesheet" href="css/components/carouselng/carouselng.ui.css?v=@version" />
+
+    <!-- quill, no template -->
+
+    <link rel="stylesheet" href="css/components/quill/quill.snow.css?v=@version" />
+
+    <!-- adicionales -->
+    <!--oculta el mensaje reconectar de blazor-->
+    <link rel="stylesheet" href="css/additionals/blazor/blazor-reconnect.css?v=@version" />
+
+    <!-- menu sidebar juan -->
+    <link rel="stylesheet" href="css/additionals/sidebarng/sidebarng.css?v=@version" />
+    <link rel="stylesheet" href="css/additionals/sidebarng/sidebarng.ui.css?v=@version" />
+    <link rel="stylesheet" href="css/additionals/sidebarng/sidebar-override.css?v=@version" />
+    <link rel="stylesheet" href="css/additionals/sidebarng/body-menu.css?v=@version">
+
+    <!--playholder-->
+
+    <link rel="stylesheet" href="css/additionals/ng-placeholder.css?v=@version">
 
     <script src="_framework/blazor.web.js"></script>
 
