--- a/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Layout/MainLayout.razor
+++ b/Alpino/Ejemplo/Ejemplo.DemoComponent/Components/Layout/MainLayout.razor
@@ -10,7 +10,31 @@
 <label for="sidebar-close" class="mobile-close-btn">×</label>
 
 <div class="main-container">
-    
+    <aside>
+        <div id="leftsidebar" class="sidebar notion-left-sidebar">
+            <div class="menu">
+                <ul class="list">
+                    <li>
+                        <div class="user-info m-b-20">
+                            <div class="image">
+                                <a href="Index"><img src="assets/images/logotipo.png" alt="User"></a>
+                            </div>
+                            <div class="detail">
+                                <h6>Nombre usuario</h6>
+                                <a style="color:white; padding:5px !important; width:90px;" href="Perfil" class="btn btn-sm btn-round btn-primary">Mi perfil</a>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class=""><a href="Index"><i class="far fa-dot-circle"></i><span>Inicio</span></a></li>
+                    <li class=""><a href="MisGestiones" class="menu-toggle"><i class="fas fa-user-check"></i><span>Mis Gestiones</span></a></li>
+                    <li class=""><a href="Logout"><i class="fas fa-user-alt-slash"></i><span>Cerrar Sesión</span></a></li>
+
+                </ul>
+            </div>
+        </div>
+    </aside>
+
     <section class="content home" style="margin: 0px !important">
         <div class="container">
             @Body
